--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "build": "strapi build",
     "strapi": "strapi"
   },
-  "devDependencies": {},
   "dependencies": {
     "@strapi/plugin-graphql": "4.1.1",
     "@strapi/plugin-i18n": "4.1.1",
     "@strapi/plugin-users-permissions": "4.1.1",
     "@strapi/strapi": "4.1.1",
-    "sqlite3": "5.0.2"
+    "sqlite3": "5.0.2",
+    "stripe": "^8.212.0"
   },
   "author": {
     "name": "A Strapi developer"
