--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@strapi/plugin-graphql": "4.1.1",
     "@strapi/plugin-i18n": "4.1.1",
     "@strapi/plugin-users-permissions": "4.1.1",
+    "@strapi/provider-email-sendgrid": "^4.1.6",
     "@strapi/strapi": "4.1.1",
     "sqlite3": "5.0.2",
+    "strapi-plugin-email-designer": "^2.1.0",
     "stripe": "^8.212.0"
   },
   "author": {
